--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
-    
+
 }
+
+
+
+.attribution { font-size: 11px; text-align: center; }
+
+
+    .attribution a { color: hsl(228, 45%, 44%); }
