--- a/style.css
+++ b/style.css
@@ -1,14 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
 
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
 
 }
 
+header {
+    margin: 50px auto;
+    max-width: 500px;
+    text-align: center;
+}
+
+h1 {
+    font-weight: 200;
+    margin: 0;
+}
+
+h1 span {
+    font-weight: 600;
+}
+
+p{
+    color: hsl(229, 6%, 66%);
+}
+
+.container {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    width: 1140px;
+}
+
+.box {
+    background-color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.05), 0 6px 6px rgba(0,0,0,0.1);
+    border-radius: 5px;
+    padding: 30px;
+    margin:15px;
+    width: 350px;
+
+}
+
+.box h2 {
+    margin:0; 
+
+}
+
+.box img {
+    display:block;
+    margin-left: auto;
+}
 
 
 .attribution { font-size: 11px; text-align: center; }
 
 
-    .attribution a { color: hsl(228, 45%, 44%); }
+ .attribution a { color: hsl(228, 45%, 44%); }
