--- a/style.css
+++ b/style.css
@@ -42,15 +42,46 @@ p{
     background-color: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.05), 0 6px 6px rgba(0,0,0,0.1);
     border-radius: 5px;
+    position: relative;
+    overflow: hidden;
     padding: 30px;
     margin:15px;
     width: 350px;
 
 }
 
+.box::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 5px;
+    width:100%;
+}
+
+.box-red::after {
+background-color:hsl(0, 78%, 62%);
+}
+
+.box-cyan::after {
+background-color: hsl(180, 62%, 55%);
+}
+.box-orange::after {
+background-color: hsl(34, 97%, 64%);
+}
+
+.box-blue::after {
+background-color: hsl(212, 86%, 64%);
+}
+
 .box h2 {
     margin:0; 
 
+}
+
+.box p {
+    font-size: 14px;
+    margin:15px 0 30px;
 }
 
 .box img {
