--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 }
 
 body {
+    background-color: hsl(0, 0%, 98%);
     font-family: 'Poppins', sans-serif;
-    font-size: 15px;
 
 }
 
@@ -35,7 +35,7 @@ p{
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
-    width: 1140px;
+    max-width: 1140px;
 }
 
 .box {
@@ -85,7 +85,7 @@ background-color: hsl(212, 86%, 64%);
 
 .box p {
     font-size: 14px;
-    margin:15px 0 30px;
+    margin:15px 0 40px;
 }
 
 .box img {
@@ -98,3 +98,10 @@ background-color: hsl(212, 86%, 64%);
 
 
  .attribution a { color: hsl(228, 45%, 44%); }
+
+ @media (max-width: 775px) {
+     .box-push {
+         transform: translateY(0);
+
+     }
+    }
